chore: yml DB설정 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 spring:
   application:
     name: glomo
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    username: glomo
+    password:
