--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,11 +28,11 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/glomo:latest
+        tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
 
     - name: Build and push Docker image with commit SHA
       uses: docker/build-push-action@v3
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/glomo:${{ github.sha }}
+        tags: ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
