--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,25 +14,27 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        java-version: '17'
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        push: true
-        tags: nimohlee/glomo:latest
+    - name: Build with Gradle
+      run: ./gradlew build
 
-    - name: Build and push Docker image with commit SHA
-      uses: docker/build-push-action@v3
+    - name: Run tests
+      run: ./gradlew test
+
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@v2.1.0
       with:
-        context: .
-        push: true
-        tags: nimohlee/glomo:${{ github.sha }}
+        args: -Dsonar.projectKey=my_project_key
+
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/glomo .
+
+    - name: Push Docker image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/glomo
+      env:
+        DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
