--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,14 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id "org.sonarqube" version "3.5.0.2730"
+
+}
+
+sonar {
+	properties {
+		property "sonar.projectKey", "glomo"
+	}
 }
 
 group = 'com.devleoh'
