docs: sonar-project.properties에 binaries 속성 추가

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,7 @@ sonar.pullrequest.branch=${ghprbSourceBranch}
 sonar.pullrequest.base=${ghprbTargetBranch}
 sonar.pullrequest.provider=github
 sonar.github.repository=nimohlee/glomo
+sonar.java.binaries=target/classes
 
 # --- optional properties ---
 
