--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.pullrequest.branch=${ghprbSourceBranch}
 sonar.pullrequest.base=${ghprbTargetBranch}
 sonar.pullrequest.provider=github
 sonar.github.repository=nimohlee/glomo
-sonar.java.binaries=target/classes
+sonar.java.binaries=build/classes
 
 # --- optional properties ---
 
