docs: sonar-project.properties에 binaries 속성 수정

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=glomo
 sonar.projectName=glomo
-sonar.projectVersion=1.0
-sonar.sources=.
-sonar.pullrequest.key=${ghprbPullId}
-sonar.pullrequest.branch=${ghprbSourceBranch}
-sonar.pullrequest.base=${ghprbTargetBranch}
-sonar.pullrequest.provider=github
-sonar.github.repository=nimohlee/glomo
+sonar.projectKey=glomo
+sonar.branch.name=main
+sonar.sources=src/main
+sonar.issuesReport.console.enable=true
+sonar.tests=src/test
+sonar.language=java
+sonar.java.source=17
 sonar.java.binaries=build/classes
+sonar.sourceEncoding=UTF-8
 
 # --- optional properties ---
 
