--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,11 @@ plugins {
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id "org.sonarqube" version "3.5.0.2730"
-
 }
 
 sonar {
 	properties {
-		property "sonar.projectKey", "glomo"
+		property "sonar.projectKey", "nimohLee_glomo_AY_yMRogb_WNf9--_QUt"
 	}
 }
 
