chore: sonar githubaction

--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@ plugins {
 
 sonar {
 	properties {
-		property "sonar.projectKey", "glomo"
-		property "sonar.projectName", "glomo"
+		property "sonar.projectKey", "nimohLee_glomo_AY_yMRogb_WNf9--_QUt"
 	}
 }
 
