--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,72 @@ plugins {
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id "org.sonarqube" version "4.4.1.3373"
+	id "jacoco"
+}
+
+jacoco {
+	// Jacoco 버전
+	toolVersion = '0.8.8'
+}
+
+jacocoTestReport {
+	dependsOn test
+	mustRunAfter test
+
+	reports {
+		xml.required = true
+		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+		csv.required = false
+	}
+}
+
+jacocoTestCoverageVerification {
+	mustRunAfter jacocoTestReport
+
+	violationRules {
+		rule {
+			element = 'CLASS'
+
+			limit {
+				counter = 'BRANCH'
+				value = 'COVEREDRATIO'
+				minimum = 0.0
+			}
+
+			limit {
+				counter = 'LINE'
+				value = 'COVEREDRATIO'
+				minimum = 0.00
+			}
+
+			limit {
+				counter = 'METHOD'
+				value = 'COVEREDRATIO'
+				minimum = 0.0
+			}
+		}
+
+		rule {
+			element = 'METHOD'
+
+			excludes = [
+			        "*"
+			]
+
+			limit {
+				counter = 'LINE'
+				value = 'TOTALCOUNT'
+				maximum = 200
+			}
+		}
+	}
+}
+
+tasks.register('testCoverage', Test) {
+	group 'verification'
+	description 'Runs the unit tests with coverage'
+
+	dependsOn('test', 'jacocoTestReport', 'jacocoTestCoverageVerification')
 }
 
 sonar {
