chore: jacoco 등록

--- a/build.gradle
+++ b/build.gradle
@@ -12,20 +12,55 @@ jacoco {
 }
 
 jacocoTestReport {
-	dependsOn tasks.test
-
 	reports {
+		html.required = false
 		xml.required = true
-		xml.outputLocation = new File("build/reports/jacoco.xml")
-		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
 		csv.required = false
+
+		html.destination file("$buildDir/jacoco/jacoco.html")
+		xml.destination file("$buildDir/jacoco/jacoco.xml")
+	}
+}
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			limit {
+				minimum = 0.30
+			}
+		}
+
+		rule {
+			enabled = true
+			element = 'CLASS'
+			limit {
+				counter = 'BRANCH'
+				value = 'COVEREDRATIO'
+				minimum = 0.50
+			}
+
+			limit {
+				counter = 'LINE'
+				value = 'COVEREDRATIO'
+				minimum = 0.50
+			}
+
+			limit {
+				counter = 'LINE'
+				value = 'TOTALCOUNT'
+				maximum = 300
+			}
+
+			excludes = [
+			        '*.test.*'
+			]
+		}
 	}
 }
 
 sonar {
 	properties {
 		property "sonar.projectKey", "nimohLee_glomo_AY_yMRogb_WNf9--_QUt"
-		property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco.xml"
 	}
 }
 
@@ -63,8 +98,6 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
-
-tasks["sonarqube"].dependsOn(clean, jacocoTestReport)
 
 tasks.named('test') {
 	useJUnitPlatform()
