--- a/build.gradle
+++ b/build.gradle
@@ -13,62 +13,15 @@ jacoco {
 
 jacocoTestReport {
 	reports {
-		html {
-			enabled false
-		}
-
-		csv {
-			enabled false
-		}
-
-		xml {
-			enabled true
-		}
-
-		html.destination file("$buildDir/jacoco/jacoco.html")
-		xml.destination file("$buildDir/jacoco/jacoco.xml")
-	}
-}
-
-jacocoTestCoverageVerification {
-	violationRules {
-		rule {
-			limit {
-				minimum = 0.30
-			}
-		}
-
-		rule {
-			enabled = true
-			element = 'CLASS'
-			limit {
-				counter = 'BRANCH'
-				value = 'COVEREDRATIO'
-				minimum = 0.50
-			}
-
-			limit {
-				counter = 'LINE'
-				value = 'COVEREDRATIO'
-				minimum = 0.50
-			}
-
-			limit {
-				counter = 'LINE'
-				value = 'TOTALCOUNT'
-				maximum = 300
-			}
-
-			excludes = [
-			        '*.test.*'
-			]
-		}
+		xml.required = true
+		html.required = true
 	}
 }
 
 sonar {
 	properties {
 		property "sonar.projectKey", "nimohLee_glomo_AY_yMRogb_WNf9--_QUt"
+		property "sonar.coverage.jacoco.xmlReportPaths", "$buildDir/reports/jacoco/test/jacocoTestReport.xml"
 	}
 }
 
@@ -109,6 +62,5 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
-
-test.finalizedBy jacocoTestReport
