chore: jacoco 등록

--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,11 @@ jacocoTestReport {
 	}
 }
 
-sonar {
+sonarqube {
 	properties {
 		property "sonar.projectKey", "nimohLee_glomo_AY_yMRogb_WNf9--_QUt"
 		property "sonar.coverage.jacoco.xmlReportPaths", "$buildDir/reports/jacoco/test/jacocoTestReport.xml"
+		property "sonar.gradle.skipCompile", "true"
 	}
 }
 
@@ -63,4 +64,12 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 	finalizedBy jacocoTestReport
+}
+
+tasks.named('jacocoTestReport') {
+	dependsOn 'test'
+}
+
+tasks.named('sonarqube') {
+	dependsOn 'jacocoTestReport'
 }
