--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,14 @@ jacocoTestReport {
 		xml.required = true
 		html.required = true
 	}
+
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it, excludes: [
+			        "**/config/*"
+			])
+		}))
+	}
 }
 
 sonar {
