chore: 테스트 커버리지에서 config 패키지 제외

--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,10 @@ jacocoTestReport {
 		html.required = true
 	}
 
-	afterEvaluate {
-		classDirectories.setFrom(files(classDirectories.files.collect {
-			fileTree(dir: it, excludes: [
-			        "**/config/*"
-			])
-		}))
+	doFirst {
+		classDirectories = files(classDirectories.files.collect {
+			fileTree(dir: it, excludes: ["**/config/**"])
+		})
 	}
 }
 
