chore: 테스트 커버리지에서 config 패키지 제외

--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,10 @@ jacocoTestReport {
 	}
 
 	doFirst {
-		classDirectories = files(classDirectories.files.collect {
+		def filteredClassDirs = classDirectories.files.collect {
 			fileTree(dir: it, excludes: ["**/config/**"])
-		})
+		}
+		classDirectories = files(filteredClassDirs.flatten())
 	}
 }
 
