--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ jacocoTestReport {
 
 	afterEvaluate {
 		classDirectories.setFrom(files(classDirectories.files.collect {
-			fileTree(dir: it, exclude: [
+			fileTree(dir: it, excludes: [
 					"**/config/**"
 			])
 		}))
