--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ jacocoTestReport {
 
 	afterEvaluate {
 		classDirectories.setFrom(files(classDirectories.files.collect {
-			fileTree(dir: it, excludes: [
+			fileTree(dir: it, exclude: [
 					"**/config/**"
 			])
 		}))
@@ -70,8 +70,12 @@ dependencies {
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
 	finalizedBy jacocoTestReport
+	useJUnitPlatform()
+
+	jacoco {
+		excludes += ["**/config/**"]
+	}
 }
 
 tasks.named('jacocoTestReport') {
