--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ sonar {
 	properties {
 		property "sonar.projectKey", "nimohLee_glomo_AY_yMRogb_WNf9--_QUt"
 		property "sonar.coverage.jacoco.xmlReportPaths", "$buildDir/reports/jacoco/test/jacocoTestReport.xml"
+		property "sonar.coverage.exclusions", "'**/config', '**/configuration', '**/dto', '**/*Config*', '**/*Configuration*','**/*Dto*'"
 	}
 }
 
