chore: 테스트 커버리지에서 config 패키지 제외

--- a/build.gradle
+++ b/build.gradle
@@ -14,26 +14,25 @@ jacoco {
 jacocoTestReport {
 	dependsOn test
 
-	afterEvaluate {
-		classDirectories.setFrom(files(classDirectories.files.collect {
-			fileTree(dir: it, exclude: [
-					"**/config/*"
-			])
-		}))
-	}
-
 	reports {
 		xml.required = true
 		html.required = true
 	}
 
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it,
+					exclude: [
+						"**/config*"
+			])
+		}))
+	}
 }
 
 sonar {
 	properties {
 		property "sonar.projectKey", "nimohLee_glomo_AY_yMRogb_WNf9--_QUt"
 		property "sonar.coverage.jacoco.xmlReportPaths", "$buildDir/reports/jacoco/test/jacocoTestReport.xml"
-		property "sonar.coverage.exclusions", "'**/config', '**/configuration', '**/dto', '**/*Config*', '**/*Configuration*','**/*Dto*'"
 	}
 }
 
