--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ jacocoTestReport {
 sonar {
 	properties {
 		property "sonar.projectKey", "nimohLee_glomo_AY_yMRogb_WNf9--_QUt"
+		property "sonar.coverage.exclusions", "**/config/**"
 		property "sonar.coverage.jacoco.xmlReportPaths", "$buildDir/reports/jacoco/test/jacocoTestReport.xml"
 	}
 }
