chore: github action 환경에서 H2 데이터베이스를 사용하도록 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,3 +36,12 @@ spring:
   config:
     activate:
       on-profile: prd
+---
+spring:
+  config:
+    activate:
+      on-profile: sonar
+  h2:
+    console:
+      enabled: true
+      path: /h2
