--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,8 +40,9 @@ spring:
 spring:
   config:
     activate:
-      on-profile: sonar
-  h2:
-    console:
-      enabled: true
-      path: /h2
+      on-profile: test
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
