--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -16,11 +16,20 @@ spring:
     activate:
       on-profile: test
   datasource:
-    driver-class-name:
-    url:
-    username:
-    password:
-
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password: password
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+  h2:
+    console:
+      enabled: true
 ---
 spring:
   config:
