--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,18 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      image: postgres:latest
-      env:
-        POSTGRES_DB: testdb
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: password
-      options: >-
-        --health-cmd "pg_isready -U postgres"
-        --health-interval 10s
-        --health-timeout 5s
-        --health-retries 5
-      ports:
-        - 5432:5432
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: testdb
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
 
     steps:
       - uses: actions/checkout@v3
