--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -16,9 +16,9 @@ spring:
     activate:
       on-profile: test
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb
-    username: sa
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/testdb
+    username: postgres
     password: password
   jpa:
     hibernate:
