--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     password: password
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
