--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
       on-profile: test
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/testdb
+    url: jdbc:postgresql://172.0.0.1:5432/testdb
     username: postgres
     password: password
   jpa:
