--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,10 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
+      - name: Create env.properties
+        run: | 
+          echo "${{ secrets.LANGCHAIN_APIKEY }}" > env.properties
+          echo "${{ secrets.NEWSAPI_APIKEY }}" >> env.properties
       - name: Wait for PostgreSQL to be ready
         run: |
           echo "Wating for PostreSQL to be ready..."
