--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -15,6 +15,10 @@ spring:
   config:
     activate:
       on-profile: test
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/test
+    driver-class-name: org.h2.Driver
+    username: sa
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -22,6 +26,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
