chore: model 패키지를 jacoco 대상에서 제외 오타 수정

--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ jacocoTestCoverageVerification {
 				"**.config.*",
 				'**.GlomoApplication*',
 				'com.devleoh.**.*DTO.*',
-				'com/devleoh/**/model/*'
+				'com.devleoh.**.model.*'
 			]
 		}
 	}
